Update to 1.21 (8) entities